--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -2304,7 +2304,7 @@ pre code {
         float: left
     }
     .col-sm-12 {
-        width: 100%
+        width: 100%;
     }
     .col-sm-11 {
         width: 91.66666667%
