--- a/style.css
+++ b/style.css
@@ -772,7 +772,7 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #c66b3d;
 }
 
 .tc-white {
@@ -780,7 +780,7 @@ h4 {
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
+    background: #c66b3d;
     color: #FFFFFF!important;
 }
 
@@ -798,7 +798,7 @@ h4 {
 }
 
 .ltc-atomic-tangerine {
-    color: #F3976C!important;
+    color: #c66b3d!important;
 }
 
 .ltc-atomic-tangerine:hover {
