HTML : Suppression des liens redondants sur la page d'accueil et création d'une ancre entre le lien Contact de la nav et le bouton 'Contact' en bas de la page / Suppression des liens redondants sur la page Contact // CSS : rectifications pour le responsive mobile de la partie footer sur Accueil et Contact //

--- a/style.css
+++ b/style.css
@@ -824,10 +824,6 @@ h4 {
     border-color: #364577!important;
 }
 
-/*.bg-lines-h2-bg {
-    background-image: url("img/lines-h2-bg.png");
-}*/
-
 .bg-banniere {
     background-image: url("img/agence-la-panthere.jpg");
 }
@@ -1037,6 +1033,12 @@ h4 {
     .blocsapp-device-iphone5 img {
         width: 180px;
         height: 320px;
+    }
+
+    .social {
+        max-width: 300px;
+        display: flex;
+        justify-content: space-around;
     }
 }
 
