--- a/style.css
+++ b/style.css
@@ -781,10 +781,6 @@ h4 {
     background-color: #FFFFFF;
 }
 
-.bgc-dark-slate-blue {
-    background-color: #364577;
-}
-
 .bgc-atomic-tangerine {
     background-color: #b05e35;
 }
@@ -819,10 +815,10 @@ h4 {
     color: #b05e35!important;
 }
 
-.icon-dark-slate-blue {
+/*.icon-dark-slate-blue {
     color: #364577!important;
     border-color: #364577!important;
-}
+}*/
 
 .bg-banniere {
     background-image: url("img/agence-la-panthere.jpg");
