--- a/style.css
+++ b/style.css
@@ -164,23 +164,23 @@ a:hover {
 }
 
 .d-bloc .panel {
-    color: rgba(0, 0, 0, .5);
+    color: #000000;
 }
 
 .d-bloc .panel button:hover {
-    color: rgba(0, 0, 0, .7);
+    color: rgb(0, 0, 0);
 }
 
 .d-bloc .panel icon {
-    border-color: rgba(0, 0, 0, .7);
+    border-color: #000000;
 }
 
 .d-bloc .panel .divider-h span {
-    border-color: rgba(0, 0, 0, .1);
+    border-color: #000000;
 }
 
 .d-bloc .panel .a-btn {
-    color: rgba(0, 0, 0, .6);
+    color: #000000;
 }
 
 .d-bloc .panel .a-btn:hover {
@@ -195,7 +195,7 @@ a:hover {
 
 .d-bloc .panel,
 .l-bloc {
-    color: rgba(0, 0, 0, .5);
+    color: #000000;
 }
 
 .d-bloc .panel button:hover,
@@ -208,12 +208,12 @@ a:hover {
 .l-bloc .icon-rounded,
 .l-bloc .icon-semi-rounded-a,
 .l-bloc .icon-semi-rounded-b {
-    border-color: rgba(0, 0, 0, .7);
+    border-color: #000000;
 }
 
 .d-bloc .panel .divider-h span,
 .l-bloc .divider-h span {
-    border-color: rgba(0, 0, 0, .1);
+    border-color: #000000;
 }
 
 .d-bloc .panel .a-btn,
@@ -231,7 +231,7 @@ a:hover {
 .l-bloc h5 a,
 .l-bloc h6 a,
 .l-bloc p a {
-    color: rgba(0, 0, 0, .6);
+    color: #000000;
 }
 
 .d-bloc .panel .a-btn:hover,
@@ -253,7 +253,7 @@ a:hover {
 }
 
 .l-bloc .navbar-toggle .icon-bar {
-    color: rgba(0, 0, 0, .6);
+    color: #000000;
 }
 
 .d-bloc .panel .btn-wire,
@@ -347,7 +347,7 @@ a:hover {
 }
 
 .navbar-toggle .icon-bar {
-    background-color: rgba(0, 0, 0, .5);
+    background-color: #000000;
     width: 26px;
 }
 
@@ -484,7 +484,7 @@ button {
 }
 
 .sm-shadow {
-    text-shadow: 0 1px 2px rgba(0, 0, 0, .3);
+    text-shadow: 0 1px 2px #000000;
 }
 
 .panel-sq,
@@ -506,7 +506,7 @@ button {
 }
 
 .form-control {
-    border-color: rgba(0, 0, 0, .1);
+    border-color: rgba(0, 0, 0, .2);
     box-shadow: none;
 }
 
@@ -579,7 +579,7 @@ a[data-lightbox]:hover img {
 .lightbox-caption {
     padding: 20px;
     color: #FFF;
-    background: rgba(0, 0, 0, .5);
+    background: #000000;
     position: absolute;
     left: 15px;
     right: 15px;
@@ -593,7 +593,7 @@ a[data-lightbox]:hover img {
     top: 20px;
     right: 20px;
     z-index: 20;
-    background: rgba(0, 0, 0, .5);
+    background: #000000;
     border: none;
     line-height: 30px;
     padding: 0 9px 5px;
@@ -635,7 +635,7 @@ a[data-lightbox]:hover img {
 
 .snapshot-lb .lightbox-caption {
     padding: 0;
-    color: rgba(0, 0, 0, .5);
+    color: #000000;
     background: none;
 }
 
@@ -727,7 +727,7 @@ h3 {
     font-size: 15px;
     text-transform: uppercase;
     font-weight: 700;
-    color: #333333!important;
+    color: #000000!important;
 }
 
 .med-width-whitespace {
@@ -737,11 +737,11 @@ h3 {
 }
 
 h1 {
-    color: #333333!important;
+    color: #000000!important;
 }
 
 h4 {
-    color: #333333!important;
+    color: #000000!important;
 }
 
 .icons {
@@ -813,11 +813,6 @@ h4 {
 .ltc-atomic-tangerine:hover {
     color: #b05e35!important;
 }
-
-/*.icon-dark-slate-blue {
-    color: #364577!important;
-    border-color: #364577!important;
-}*/
 
 .bg-banniere {
     background-image: url("img/agence-la-panthere.webp");
