HTML : remplacement du fichier css minifié par les différents fichiers non minifiés

--- a/style.css
+++ b/style.css
@@ -776,9 +776,9 @@ h4 {
     text-decoration: underline!important;
 }
 
-/*.bgc-white {
+.bgc-white {
     background-color: #FFFFFF;
-}*/
+}
 
 .bgc-atomic-tangerine {
     background-color: #b05e35;
