--- a/style.css
+++ b/style.css
@@ -659,6 +659,7 @@ a {
 .hero-bloc-text {
     font-size: 38px;
     background-color: rgba(176, 94, 53, 0.7);
+    padding: 20px;
 }
 
 .hero-bloc-text-sub {
@@ -1049,4 +1050,9 @@ h4 {
     color:#FFFFFF;
     display: flex;
     flex-direction: column;
+}
+
+.bg-brown {
+    background-color: rgba(176, 94, 53, 0.7);
+    padding: 20px;
 }
